<resources>
    <string name="app_name">Andújar Salud</string>
    <string name="sign_in">INICIAR SESIÓN</string>
    <string name="sub_sign_in">Acceda a su cuenta de Andújar Salud</string>
    <string name="sub_sign_in_admin">Entra como administrador a la app</string>
    <string name="email">correo</string>
    <string name="password">contraseña</string>
    <string name="repeat_password">repita contraseña</string>
    <string name="str_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password">RECUPERAR CUENTA</string>
    <string name="sub_forgot_password">Recuperaremos tu cuenta de Andújar Salud</string>
    <string name="next">Siguiente</string>
    <string name="dont_have_account">¿No tienes una cuenta?</string>
    <string name="register_now">Regístrate ahora</string>
    <string name="logo">logo</string>
    <string name="register">REGISTRARSE</string>
    <string name="sub_register">Cree una cuenta de Andújar Salud</string>
    <string name="name">nombre</string>
    <string name="surname">apellidos</string>
    <string name="terms">He leído y acepto los términos y condiciones y la política de privacidad</string>
    <string name="recover_account">Recuperar cuenta</string>
    <string name="home">Inicio</string>
    <string name="doctors">Nuestros profesionales</string>
    <string name="reserve">Cita previa</string>
    <string name="contact">Contacto</string>
    <string name="settings">Ajustes</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="admin_mode">Acceder como administrador</string>
    <string name="log_out">Cerrar sesión</string>

    <string name="ours_profesionals">NUESTROS DOCTORES</string>
    <string name="sub_ours_profesionals">Estos son los profesionales que trabajan en Andújar Salud</string>

    <string name="psicologia_doc">Dra. Francisca Barba Colmenero</string>
    <string name="psicologia">Psicóloga</string>
    <string name="psicologia_horario_dia">Miércoles y Jueves</string>
    <string name="psicologia_horario_hora">Mañana y tarde</string>

    <string name="dermatologia_doc">Dr. Baldomero García Mir</string>
    <string name="dermatologia">Dermatólogo</string>
    <string name="dermatologia_horario_dia">Martes</string>
    <string name="dermatologia_horario_hora">Tarde</string>
    
    <string name="traumatologia_doc">Dr. José Manuel Moreno Hidalgo</string>
    <string name="traumatologia">Traumatología</string>
    <string name="traumatologia_horario_dia">Lunes y Martes</string>
    <string name="traumatologia_horario_hora">Tarde</string>

    <string name="psiquiatria_doc">Dr. Jorge Auladell Saniger</string>
    <string name="psiquiatria">Psiquiatría</string>
    <string name="psiquiatria_horario_dia">Lunes</string>
    <string name="psiquiatria_horario_hora">Tarde</string>

    <string name="otorrinolaringologia_doc">Dr. José María Pérez-Barrio Pedraza</string>
    <string name="otorrinolaringologia">Otorrinolaringología</string>
    <string name="otorrinolaringologia_horario_dia">Lunes y Jueves</string>
    <string name="otorrinolaringologia_horario_hora">Mañana y tarde</string>

    <string name="oftalmologia_doc">Dr. Francisco Jiménez Pertíñez</string>
    <string name="oftalmologia">Oftalmología</string>
    <string name="oftalmologia_horario_dia">Miércoles y Jueves</string>
    <string name="oftalmologia_horario_hora">Tarde</string>

    <string name="widex_doc">WIDEX</string>
    <string name="widex">Adaptación de Audífonos</string>
    <string name="widex_horario_dia">Lunes a Viernes</string>
    <string name="widex_horario_hora">Mañana y tarde</string>

    <string name="insert">INSERTAR PACIENTE</string>
    <string name="sub_insert">Introduzca un nuevo paciente</string>
    <string name="nif">nif</string>
    <string name="phone_number">número de teléfono</string>
    <string name="address">dirección</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_menu">Bienvenido/a a la App de Andújar Salud</string>
    <string name="back">back</string>

    <string name="good_morning">Buenos días</string>
    <string name="good_afternoon">Buenas tardes</string>
    <string name="good_evening">Buenas noches</string>
    <string name="welcome">%s,</string>
    <string name="menu">Menú</string>
    <string name="access">Acceso</string>
    <string name="noticias">NOTICIAS</string>
    <string name="info">+ info</string>
    <string name="saludo">saludo</string>
    <string name="nombre">nombre</string>

</resources>