<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/doctor"
            android:icon="@drawable/nav_doctor"
            android:title="@string/doctors"/>

        <item
            android:id="@+id/reserve"
            android:icon="@drawable/nav_reserve"
            android:title="@string/reserve"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings"/>

    </group>

</menu>