<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="120dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imagenLogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/logo"
                    android:contentDescription="@string/logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textColor="@color/texto"
                    android:textSize="22sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textoIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="28sp"
                android:textColor="@color/texto"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textoSubInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_register"
                android:textSize="16sp"
                android:textColor="@color/texto"
                android:layout_marginStart="32dp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/campoNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/campoUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/campoPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password" />

            <EditText
                android:id="@+id/campoRepitePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/repeat_password"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password" />


            <CheckBox
                android:id="@+id/campoPrivacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/terms" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonSiguiente"
                style="@android:style/Widget.Button"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/boton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>