<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/logo"/>

            <TextView
                android:id="@+id/textoIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recover_account"
                android:textSize="50sp"
                android:textColor="@color/texto"
                android:layout_marginTop="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/campoUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress" />

        <LinearLayout
            android:id="@+id/layoutPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/campoPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/campoRepitePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/repeat_password"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto_pistas"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress" />

        </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonSiguiente"
                style="@android:style/Widget.Button"
                android:layout_marginTop="25dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/boton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:visibility="visible"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonSiguiente2"
                style="@android:style/Widget.Button"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/boton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:visibility="invisible"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>